--- a/css/main.css
+++ b/css/main.css
@@ -2587,11 +2587,10 @@ label {
 .settings__conf__regionInput__regions__header:hover {
   background-color: rgba(255, 255, 255, 0.07);
 }
-.settings__conf__regionInput__regions__list {
+.settings__conf__regionInput__regions__inner {
+  display: none;
   position: relative;
   z-index: 1;
-  display: none;
-  flex-direction: column;
   width: 100%;
   border-radius: 0px 0px 15px 15px;
   background-color: rgba(255, 255, 255, 0.1);
@@ -2605,14 +2604,30 @@ label {
   padding-left: 7px;
   animation: open 0.25s cubic-bezier(0, 0, 0, 0.75) 1;
 }
-.settings__conf__regionInput__regions__list__region {
+.settings__conf__regionInput__regions__inner__search {
+  margin-bottom: 5px;
+}
+.settings__conf__regionInput__regions__inner__search > input {
+  height: 40px;
+  font-size: 14px;
+  border-radius: 10px;
+  padding-left: 14px;
+}
+.settings__conf__regionInput__regions__inner__list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-height: 210px;
+  overflow: auto;
+}
+.settings__conf__regionInput__regions__inner__list__region {
   padding-left: 10px;
   padding-top: 7px;
   padding-bottom: 7px;
   border-radius: 10px;
   cursor: pointer;
 }
-.settings__conf__regionInput__regions__list__region:hover {
+.settings__conf__regionInput__regions__inner__list__region:hover {
   background-color: #555;
 }
 .settings__conf__regionInput_open .settings__conf__regionInput__regions__header {
@@ -2621,10 +2636,10 @@ label {
 .settings__conf__regionInput_open .settings__conf__regionInput__regions__header > svg {
   transform: rotate(270deg);
 }
-.settings__conf__regionInput_open .settings__conf__regionInput__regions__list {
-  display: flex;
+.settings__conf__regionInput_open .settings__conf__regionInput__regions__inner {
+  display: block;
 }
-.settings__conf__regionInput_open input {
+.settings__conf__regionInput_open input[name=inp-region] {
   border-radius: 15px 15px 0px 0px;
 }
 .settings__buttons {
