--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -276,4 +276,144 @@
             display: none;
         }
     }
+    &__catalog {
+        position: absolute;
+        z-index: 3;
+        top: 85px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: none;
+        animation: open .5s base.$tf-main 1;
+        &__head {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 16px;
+            margin-bottom: 10px;
+            @include base.style-main;
+            height: 45px;
+            padding-left: 15px;
+            border-radius: 10px;
+            &__title {
+                font-weight: 600;
+            }
+            &__more {
+                height: 100%;
+                display: flex;
+                align-items: center;
+                opacity: .5;
+                cursor: pointer;
+                padding-right: 15px;
+                padding-left: 15px;
+                transition: .15s;
+                &:hover {
+                    opacity: 1;
+                }
+            }
+        }
+        &__navs {
+            display: flex;
+            gap: 30px;
+            &__genres {
+                width: 50%;
+                &__list {
+                    @include base.grid(10px, 3);
+                    &__genre {
+                        position: relative;
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        @include base.style-main_click;
+                        border-radius: 10px;
+                        padding: 5px;
+                        overflow: hidden;
+                        &__icon {
+                            position: relative;
+                            z-index: 2;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            height: 35px;
+                            & > img {
+                                height: 100%;
+                            }
+                        }
+                        &__title {
+                            position: relative;
+                            z-index: 2;
+                            cursor: pointer;
+                        }
+                        &:hover .header__catalog__navs__indicator {
+                            transition: 1s;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+            &__authors {
+                width: 50%;
+                &__list {
+                    @include base.grid(10px, 5);
+                    &__author {
+                        position: relative;
+                        height: 104px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        gap: 5px;
+                        @include base.style-main_click;
+                        border-radius: 10px;
+                        overflow: hidden;
+                        &__img {
+                            position: relative;
+                            z-index: 2;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: 80%;
+                            height: 50px;
+                            & > img {
+                                max-height: 100%;
+                                max-width: 100%;
+                            }
+                        }
+                        &__title {
+                            position: relative;
+                            z-index: 2;
+                            cursor: pointer;
+                        }   
+                        &:hover .header__catalog__navs__indicator {
+                            transition: 1s;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+            &__indicator {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                width: 0%;
+                z-index: 1;
+                // background-color: rgba(255, 255, 255, .07);
+                background-color: base.$clr-blue_light;
+                opacity: .3;
+                transition-timing-function: base.$tf-main;
+            }
+        }
+        &__gamelist {
+
+        }
+        &_open {
+            display: block;
+        }
+    }
+    &_open &__bg{
+        opacity: 1;
+        bottom: -313px;
+    }
 }
