--- a/scss/elements/index/_banner.scss
+++ b/scss/elements/index/_banner.scss
@@ -3,7 +3,7 @@
 .banner {
     &__game {
         box-sizing: border-box;
-        padding: 20px 150px 15px 150px;
+        // padding: 20px 150px 15px 150px;
         &__imgBlock {
             width: 100%;
             border-radius: 25px;
@@ -16,6 +16,8 @@
             }
         }
         &__interaction {
+            position: relative;
+            z-index: 3;
             transform: translateY(-100%);
             padding-left: 25px;
             padding-bottom: 25px;
@@ -45,8 +47,8 @@
                     display: flex;
                     justify-content: space-between;
                     background-color: rgba(255, 255, 255, 0.1);
-                    -webkit-backdrop-filter: blur(30px);
-                    backdrop-filter: blur(30px);
+                    -webkit-backdrop-filter: blur(3px);
+                    backdrop-filter: blur(3px);
                     // border: 1px solid rgba(255, 255, 255, 0.3);
                     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.3);
                     border-radius: 20px;
@@ -54,7 +56,7 @@
                     width: 350px;
                     position: relative;
                     z-index: 3;
-                    @include base.style-glass;
+                    @include base.style-main;
                     &__buttons {
                         display: flex;
                         gap: 10px;
@@ -62,7 +64,7 @@
                             width: 55px;
                             height: 55px;
                             padding: 12px;
-                            background-color: rgba(255, 255, 255, 0.1);
+                            // background-color: rgba(255, 255, 255, 0.1);
                             // border: 1px solid rgba(255, 255, 255, 0.3);
                             border-radius: 50%;
                             transition: .15s;
@@ -71,15 +73,15 @@
                                 width: 100%;
                                 filter: invert(1);
                             }
-                            &:hover {
-                                background-color: rgba(255, 255, 255, 0.2);
-                            }
-                            &:hover img {
-                                animation: header_nav_hover .25s ease-out 1;
-                            }
-                            &:active {
-                                transform: scale(0.95);
-                            }
+                            // &:hover {
+                            //     background-color: rgba(255, 255, 255, 0.2);
+                            // }
+                            // &:hover img {
+                            //     animation: header_nav_hover .25s ease-out 1;
+                            // }
+                            // &:active {
+                            //     transform: scale(0.95);
+                            // }
                             // &_active.banner__interaction__info__shopInfo__buttons__button_favorite {
                             //     // background-color: base.$lightRed;
                             //     // ! background: base.$redGradient;
@@ -88,7 +90,7 @@
                             //     // background-color: base.$lightBlue;
                             //     // ! background: base.$mainGradient_100;
                             // }
-                            @include base.style-glass_hover;
+                            @include base.style-main_click;
                         }
                     }
                     &__priceTag {
@@ -113,7 +115,7 @@
                             }
                         }
                         &__discount {
-                            background-color: rgba(255, 255, 255, 0.1);
+                            // background-color: rgba(255, 255, 255, 0.1);
                             // border: 1px solid rgba(255, 255, 255, 0.5);
                             border-radius: 10px;
                             height: 100%;
@@ -123,7 +125,7 @@
                                 left: 15px;
                                 right: 15px;
                             }
-                            @include base.style-glass;
+                            @include base.style-main;
                         }
                     }
                     &_dark {
