--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @use "elements/index/carousel";
 @use "elements/index/salesHits";
 @use "elements/index/banner";
+@use "elements/index/games";
 @use "elements/index/offers";
 @use "elements/game_card/miniGameCard";
 @use "elements/game_card/bigImgBlock";
