--- a/scss/elements/_blockButtonMore.scss
+++ b/scss/elements/_blockButtonMore.scss
@@ -3,13 +3,12 @@
 .blockButtonMore {
         display: flex;
         justify-content: end;
-        margin-top: 30px;
         &__button {
             display: flex;
             align-items: center;
             cursor: pointer;
 
-            padding: 12px 12px 12px 16px;
+            padding: 10px 10px 10px 14px;
             border-radius: 25px;
             background-color: rgba(255, 255, 255, .05);
             @include base.style-main_click;
@@ -17,9 +16,8 @@
             & > span {
                 display: block;
                 font-family: base.$fnt-all;
-                font-size: 16px;
+                font-size: 15px;
                 font-weight: 400;
-                transform: translateY(-1px);
                 transition: .2s;
             }
             & > svg {
@@ -34,7 +32,7 @@
                 transform: translateY(1px) translateX(20px);
             }
             &:hover > span{
-                transform: translateY(-1px) translateX(13px);
+                transform: translateX(13px);
             }
             &:active {
                 transform: scale(.95);
